ui_tests/tests/lowering/let-in-without-definition.stderr
error[E015]: missing mandatory type annotation on declaration `foo`
 --> ${DIRECTORY}/lowering/let-in-without-definition.lushui:3:1
  |
3 | foo = let x f in 0
  | ^^^^^^^^^^^^^^^^^^ 
  |
 help: provide a type annotation for the declaration with `: TYPE`

error[E012]: let-binding `x` has no definition
 --> ${DIRECTORY}/lowering/let-in-without-definition.lushui:3:7
  |
3 | foo = let x f in 0
  |       ^^^^^^^ 
  |
 help: provide a definition with `=`

error: aborting due to 2 previous errors

